<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/CreateAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="Create An Account:"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/createAccountViewEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreateAccountTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:text="Email:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/createActViewEmailEdtTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccountViewEmailTextView"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/createAccountViewPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createActViewEmailEdtTxt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="Password:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/createActViewPasswordEdtTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccountViewPasswordTextView"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/createAccountViewReEnterPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createActViewPasswordEdtTxt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="Re-enter Password:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/createActViewReEnterPasswordEdtTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccountViewReEnterPasswordTextView"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/createActViewCreateActBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createActViewReEnterPasswordEdtTxt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="Create your Account" />

    <Button
        android:id="@+id/createAccountViewRetLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="Return to Login" />
</RelativeLayout>