...
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:text="Logout"/>
...
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:text="Edit Filters"/>

        <Button
            android:id="@+id/chatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:text="Enter Chat"/>
...
