<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view_layer.chat.ContactsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/contactsActivityToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="#075E54">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/contactsActivityBackButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/contactsActivityToolbarTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/contactsActivityBackButton"
                android:text="UofTinder"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactsActivityRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>