...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/createAccountViewPasswordEditText"
        android:layout_marginTop="25dp"
        android:inputType="textPersonName"
        android:text="Re-enter Password:"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/createAccountViewReEnterPasswordEditText"
...
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/createAccountViewCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/createAccountViewReEnterPasswordEditText"
        android:layout_marginTop="25dp"
        android:text="Create your Account" />
...
